PRJ_VER=1.0.3.99
SUMMARY=Revise Zanata support
BODHI_UPDATE_TYPE=bugfix
REDHAT_BUGZILLA=
[Changes]
- after_release_commit depends rpm_changelog_prev_update if RPM supported enabled.
- Corrected the 'FORCE' of cmake CACHE
- Update the error messages when cmake-fedora is not installed.
- Fixed target: zanata_push_trans.
- Fixed zanata arguments.
- fedpkg clone is now triggered if the clone directory does not exist when doing the fedpkg_commit,
  it no longer the listed OUTPUT of an ADD_CUSTOM_COMMAND.
- Add target: translations as an universal easy target to generate/update translation files.
