@@ -5,7 +5,7 @@ Summary:    @PRJ_SUMMARY@
 License:    @LICENSE@
 Group:      System Environment/Libraries
 URL:        <URL>
-Source0:    <SITE>/%{name}-%{version}-Source.@SOURCE_ARCHIVE_FILE_EXTENSION@
+Source0:    <SITE>/%{name}-%{version}.@SOURCE_ARCHIVE_FILE_EXTENSION@
 Source1:    https://fedorahosted.org/releases/c/m/cmake-fedora/cmake-fedora-<CMAKE_FEDORA_VERSION>-modules-only.tar.gz
 
 BuildRoot:  %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
@@ -16,7 +16,7 @@ BuildRequires:  cmake >= 2.6
 @PRJ_DESCRIPTION@
 
 %prep
-%setup -q -n %{name}-%{version}-Source
+%setup -q -n %{name}-%{version}
 tar xzvf %{SOURCE1}
 
 %build
